# ifnotus

./: .env.example  .gitignore  Makefile  README.md  audit-vps-production.txt  audit.txt  docker-compose.yml
applications/: README.md  (+4 more)
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_hosting.py  0003_domain_proxy_port.py  0004_auth_access_control.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  applications.py  deps.py  hosting.py  monitoring.py  operations.py
backend/app/api/v1/: __init__.py
backend/app/cli/: seed_admin.py
backend/app/core/: __init__.py  config.py  container.py  database.py  events.py  exceptions.py  logging.py  openapi.py  permissions.py  security.py
backend/app/integrations/: __init__.py  base.py
backend/app/integrations/git/: client.py
backend/app/models/: __init__.py  access.py  base.py  hosting.py  user.py
backend/app/plugins/: __init__.py  base.py  example.py  loader.py  registry.py
backend/app/repositories/: __init__.py  access.py  applications.py  base.py  domain.py  mail.py  terminal_audit.py  user.py
backend/app/schemas/: __init__.py  applications.py  auth.py  common.py  health.py  hosting.py  inventory.py  monitoring.py  operations.py  security.py  user.py
backend/app/services/: __init__.py  access_control.py  auth.py  health.py  inventory.py
backend/app/utils/: __init__.py  cache.py  middleware.py  pagination.py
backend/app/workers/: __init__.py  base.py  cli.py  queue.py  registry.py  runner.py
backend/tests/: __init__.py
backend/tests/integration/: test_health.py
(+167 files in other folders)
