[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifnotus"
version = "0.1.0"
description = "IFNOTUS — Infrastructure and Operations Platform"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "IFNOTUS Team" }]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "dependency-injector>=4.42.0",
    "python-multipart>=0.0.17",
    "tenacity>=9.0.0",
    "psutil>=6.1.0",
    "pymysql>=1.1.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
]

[project.scripts]
ifnotus = "app.main:run"
ifnotus-worker = "app.workers.cli:main"
ifnotus-seed-admin = "app.cli.seed_admin:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
